# magicrune

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.multiarch  ERROR_CODES.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MASTER.md  README-GITHUB.md  README.md  SECURITY.md  SPEC.md  THIRD-PARTY-LICENSES.txt  about.hjson  build.rs  deny.toml  docker-compose.yml  homebrew-formula.rb  install.sh  patch.diff  policy.schema.json  policy.yml  release.sh  result.json  result2.json  rust-toolchain.toml  security-report.md  test_script.py
.cargo/: audit.toml  config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ai-safety.yml  cargo-check-matrix.yml  ci-full.yml  ci.yml  cosign.yml  docker-buildx.yml  e2e.yml  release.yml  sbom.yml  sec-ci.yml  security.yml  test-build.yml
benchmarks/: README.md  compute_msg_id_bench.rs  grader_bench.rs  sandbox_bench.rs
crates/analyzer/: Cargo.toml
crates/analyzer/src/: lib.rs
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/detector/: Cargo.toml
crates/detector/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs  sandbox_docker.rs  sandbox_linux.rs  sandbox_macos.rs  sandbox_windows.rs
crates/sign/: Cargo.toml
crates/sign/src/: lib.rs
crates/vscode-bridge/: Cargo.toml
crates/vscode-bridge/src/: lib.rs
examples/: README.md  sample_policy.yml  sample_request.json
fixtures/: spell_ok.result.json
npm/: .npmignore  README.md  index.js  install.js  package.json
policies/: default.policy.yml
samples/: deny_net.json  etc_write.json  ok.json  suspicious.json  write_forbidden.json
schemas/: spell_request.schema.json  spell_result.schema.json
spell-app/magicrune/: Cargo.toml
spell-app/magicrune/.github/workflows/: ci.yml
spell-app/magicrune/policies/: default.policy.yml
spell-app/magicrune/samples/: etc_write.json  ok.json  suspicious.json
spell-app/magicrune/schemas/: spell_request.schema.json  spell_result.schema.json
spell-app/magicrune/src/: grader.rs  ledger.rs  main.rs  sandbox.rs  schema.rs
src/: check_forbidden_apis.rs  grader.rs  jet.rs  ledger.rs  lib.rs  main.rs  observability.rs  sandbox.rs  schema.rs
src/adapters/: mod.rs  std_adapters.rs
src/ports/: env.rs  io.rs  mod.rs  time.rs
src/sandbox/: cgroups.rs
test-projects/go/: go.mod  main.go  main_test.go
test-projects/nodejs/: package.json  test.js
test-projects/python/: test_sample.py
tests/: acceptance.rs  cgroups_limits.rs  chaos_tests.rs  contract_api.rs  contract_cli.rs  determinism.rs  e2e.rs  jet_e2e.rs  load_tests.rs  nats_smoke.rs  net_allowlist.rs  policy.rs  policy_fs.rs  property_tests.rs  sandbox_detect.rs  wasm_smoke.rs
