[package]
name = "bootstrapped"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
default-run = "bootstrapped"
license = "MIT OR Apache-2.0"
description = "A bootstrapped Rust/WASM edge application"
repository = "https://github.com/NishizukaKoichi/bootstrapped"

[[bin]]
name = "bootstrapped"
path = "src/main.rs"

[features]
default = ["std"]
std = []
wasm = []
jet = ["dep:async-nats"]
wasm_exec = ["dep:wasmtime", "dep:wasmtime-wasi"]
linux_native = ["dep:nix"]
native_sandbox = ["linux_native", "dep:libseccomp"]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
async-trait = "0.1"
jsonschema = { version = "0.17", default-features = false }
async-nats = { version = "0.39", optional = true }
wasmtime = { version = "15", optional = true }
wasmtime-wasi = { version = "15", optional = true }
sha2 = "0.10"
base64 = "0.22"
nix = { version = "0.29", optional = true }
libseccomp = { version = "0.3", optional = true }
anyhow = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
url = "2.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.tokio]
version = "1.47"
features = ["rt-multi-thread","macros","time","process"]

[dev-dependencies]
