[package]
name = "magicrune"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "magicrune"
path = "src/main.rs"

[dependencies]
magicrune-policy = { path = "../policy" }
magicrune-detector = { path = "../detector" }
magicrune-runner = { path = "../runner" }
magicrune-analyzer = { path = "../analyzer" }
magicrune-sign = { path = "../sign" }
magicrune-audit = { path = "../audit" }

clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
chrono.workspace = true
colored = "2.1"
indicatif = "0.17"