[package]
name = "magicrune-policy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
jsonschema.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"