[package]
name = "magicrune-runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
magicrune-policy = { path = "../policy" }
magicrune-audit = { path = "../audit" }
magicrune-analyzer = { path = "../analyzer" }

tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
nix.workspace = true
caps.workspace = true
seccomp.workspace = true
tempfile = "3.8"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
seccomp = "0.3"

[dev-dependencies]
tempfile = "3.8"