[package]
name = "magicrune-runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
magicrune-policy = { path = "../policy" }
magicrune-audit = { path = "../audit" }
magicrune-analyzer = { path = "../analyzer" }

tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tempfile = "3.8"
libc = "0.2"

[target.'cfg(unix)'.dependencies]
nix.workspace = true

# Linux-specific dependencies removed for compatibility
# [target.'cfg(target_os = "linux")'.dependencies]
# caps = { version = "0.5", optional = true }
# seccomp = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3.8"