[package]
name = "magicrune-vscode-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"